--- a/permission/templates/role_permission.html
+++ b/permission/templates/role_permission.html
@@ -19,6 +19,8 @@
             <a class="button btn btn-danger" data-toggle="modal" data-target="#myModal7">删除组</a>
             <a class="button btn btn-danger" data-toggle="modal" data-target="#myModal4">查看组权限</a>
             <a class="button btn btn-danger" data-toggle="modal" data-target="#myModal3">组菜单授权</a>
+            <a class="btn-sm btn btn-warning pull-right" data-toggle="modal"
+                           data-target="#add_role">增加角色</a>
         </div>
         <table class="table table-striped center">
             <thead>
@@ -34,95 +36,15 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ role.title }}</td>
                     <td>
-                        <a class="button btn btn-sm btn-primary" data-toggle="modal"
-                           data-target="#accredit{{ forloop.counter }}">授权</a>
-                        <div class="modal fade" id="accredit{{ forloop.counter }}" tabindex="-1" role="dialog"
-                             aria-labelledby="myModalLabel">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close"><span
-                                                aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">请选择权限</h4>
-                                    </div>
-                                    <form action="/permission/role_accredit/{{ role.id }}/?role_group_id={{ role_group_id }}"
-                                          method="post">
-                                        {% csrf_token %}
-                                        <div class="modal-body">
-                                            <select name="role_permissions" multiple class="form-control"
-                                                    style="height: 200px;">
-                                                {% for crud_permission in crud_permission_list %}
-                                                    <option value="{{ crud_permission.id }}">{{ crud_permission.title }}</option>
-                                                {% endfor %}
-                                            </select>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">保存</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
 
-                     <a class="button btn btn-sm btn-primary" data-toggle="modal"
-                           data-target="#cat_permission{{ forloop.counter }}">查看功能权限</a>
-                        <div class="modal fade" id="cat_permission{{ forloop.counter }}" tabindex="-1" role="dialog"
-                             aria-labelledby="myModalLabel">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close"><span
-                                                aria-hidden="true">&times;</span></button>
-                                    </div>
+                          <a class="button btn btn-sm btn-primary" data-toggle="modal"
+                           data-target="#accredit_role{{ forloop.counter }}">角色授权</a>
+                            {% include 'role_accredit.html' %}
 
-                                        <div class="modal-body">
-                                                {% for r in  role.permissions.all %}
-                                                    <p>{{ r.title }}</p>
-                                                {% endfor %}
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                                            </button>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
+                            {% include 'old.html' %}
 
-                        <a class="button btn btn-sm btn-primary" data-toggle="modal"
-                           data-target="#delete_permission{{ forloop.counter }}">去除权限</a>
-                        <div class="modal fade" id="delete_permission{{ forloop.counter }}" tabindex="-1" role="dialog"
-                             aria-labelledby="myModalLabel">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close"><span
-                                                aria-hidden="true">&times;</span></button>
-                                        <a class="btn btn-success center cat_permissions" role_id="{{ role.id }}">查看所有权限</a>
-                                    </div>
-                                    <form action="/permission/role_del_permission/{{ role.id }}/?role_group_id={{ role_group_id }}"
-                                          method="post">
-                                        {% csrf_token %}
 
-                                        <div class="modal-body">
-                                            <select name="role_permissions2" multiple class="form-control" role_id="{{ role.id }}"
-                                                    style="height: 200px;">
-                                            </select>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">删除权限</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
+         </td>
                     <td>
                             <a class="button btn btn-sm btn-primary" data-toggle="modal"
                            data-target="#data_permission{{ forloop.counter }}">查看数据权限</a>
@@ -235,43 +157,15 @@
                             </div>
                         </div>
                         <a class="btn-sm btn btn-warning" data-toggle="modal"
-                           data-target="#add_role{{ forloop.counter }}">增加角色</a>
-                        <div class="modal fade" id="add_role{{ forloop.counter }}" tabindex="-1" role="dialog"
-                             aria-labelledby="myModalLabel">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"
-                                                aria-label="Close"><span
-                                                aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="myModalLabel">添加角色信息</h4>
-                                    </div>
-                                    <form action="/permission/add_role/?role_group_id={{ role_group_id }}"
-                                          method="post">
-                                        {% csrf_token %}
-                                        <div class="modal-body">
-                                            <p>角色名<input type="text" name="role_title"></p>
-                                            角色组<select name="role_group_id">
-                                            {% for role_group in role_group_list %}
-                                                <option value="{{ role_group.id }}">{{ role_group.title }}</option>
-                                            {% endfor %}
-                                        </select>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
-                                            </button>
-                                            <button type="submit" class="btn btn-primary">保存</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                           data-target="#add_role">增加角色</a>
+
 
                     </td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
+
 
 
         <!-- Modal -->
@@ -336,6 +230,36 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="add_role" tabindex="-1" role="dialog"
+                             aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal"
+                                                aria-label="Close"><span
+                                                aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">添加角色信息</h4>
+                                    </div>
+                                    <form action="/permission/add_role/?role_group_id={{ role_group_id }}"
+                                          method="post">
+                                        {% csrf_token %}
+                                        <div class="modal-body">
+                                            <p>角色名<input type="text" name="role_title"></p>
+                                            角色组<select name="role_group_id">
+                                            {% for role_group in role_group_list %}
+                                                <option value="{{ role_group.id }}">{{ role_group.title }}</option>
+                                            {% endfor %}
+                                        </select>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                                            </button>
+                                            <button type="submit" class="btn btn-primary">保存</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
 
 
         {% include 'tree.html' %}
@@ -343,6 +267,7 @@
 
 
     </div>
+
 {# <script type="text/javascript">#}
 {#       $(function () {#}
 {#            $(".cat_permissions").click(function () {#}
