--- a/menu_management/templates/first_menu_manage.html
+++ b/menu_management/templates/first_menu_manage.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
     {% csrf_token %}
-    <table class="table table-hover table-striped table-bordered">
+    <table class="table table-hover table-striped table-bordered" style="text-align: center">
         <thead>
         <tr>
-            <th>
+            <th style="text-align: center">
                 <input type="checkbox">
             </th>
-            <th>编号</th>
-            <th>菜单名称</th>
-            <th>状态</th>
-            <th>操作</th>
+            <th style="text-align: center">编号</th>
+            <th style="text-align: center">菜单名称</th>
+            <th style="text-align: center">状态</th>
+            <th style="text-align: center">操作</th>
         </tr>
         </thead>
         <tbody id="mtbody">
@@ -39,7 +39,6 @@
     </table>
     <div>
         {% include 'tags_html/add_tag.html' %}
-        <a class="btn btn-warning">返回</a>
     </div>
     <script src="/static/js/jquery-3.3.1.min.js"></script>
     <script src="/static/js/csrfajax.js"></script>
