--- a/menu_management/templates/tags_html/add_tag.html
+++ b/menu_management/templates/tags_html/add_tag.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" id="btn_add">
     增加
 </button>
 
@@ -14,22 +14,61 @@
                 {% csrf_token %}
                 <div class="form-horizontal">
                     <div class="modal-body">
-                        <div class="form-group">
+                        <div class="form-group" >
                             <label for="inputPassword2" class="col-sm-3 control-label">请输入菜单名称</label>
-                            <div class="col-sm-9">
-                                <input type="text" id="menu_name" class="form-control" name="menu_name"
-                                       placeholder="请输入菜单名称">
+                            <div class="col-sm-9" id="menu">
+                                <input type="text" id="first_menu_name" class="form-control" name="menu_name"
+                                       placeholder="请输入菜单名称" style="">
+                            </div>
+                            <p style="color: red; display: none;text-align: center" id="prompt">该菜单名已经存在</p>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="radio">请选择菜单状态</label>
+                            <div id="radio" class="col-sm-9">
+                                <label class="radio-inline">
+                                    <input type="radio" name="menu_status" id="inlineRadio1" value="1"> 显示
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" name="menu_status" id="inlineRadio2" value="0"> 隐藏
+                                </label>
                             </div>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                        {#                            <button type="button" id="add_btn" class="btn btn-primary" data-dismiss="modal">保存</button>#}
-                        <button type="submit" class="btn btn-primary">保存</button>
-                    </div>
                 </div>
-            </form>
-        </div>
-
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button id="sub_btn" type="submit" class="btn btn-primary">保存</button>
+                </div>
+        </form>
     </div>
+
 </div>
+</div>
+<script src="/static/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript">
+
+    $('body').delegate('#first_menu_name', 'blur', function () {
+        console.log('nihao');
+        var menu_name=$(this).val();
+        console.log({{ first_menu_title }});
+        $.ajax({
+            url:'/menu/add/first/',
+            type:'get',
+            data:{
+                'menu_name':menu_name
+            },
+            success:function (data) {
+                if (data.span == '1') {
+                    $('#prompt').css('display','block');
+                    $('#sub_btn').attr('disabled','disabled')
+                }
+                else
+                {
+                    $('#prompt').css('display','none');
+                    $('#sub_btn').removeAttr('disabled')
+                }
+            }
+        });
+
+    })
+</script>
