--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
     <!--/. NAV TOP  -->
     <!-- 菜单  -->
     {% load menu %}
-    {% get_menu %}
+    {% get_menu request%}
     <!-- /. NAV SIDE  -->
     <div id="page-wrapper">
         <div id="page-inner">
@@ -210,6 +210,7 @@
 <!-- Custom Js -->
 <script src="/static/assets/js/custom-scripts.js"></script>
 <script>
+
     $('.mysecond').mouseenter(function () {
         $(this).css('color', 'yellow')
     });
